[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-message-runtime-wasm'
version = '1.0.0'

[workspace]
members = []

[features]
default = []
std = ['substrate-message-runtime/std']
[dependencies.substrate-message-runtime]
default-features = false
path = '..'
